src/snapshots/cronexpr__parser__tests__parse_crontab_failed-29.snap
---
source: src/parser.rs
expression: "parse_crontab(\"*/0 * * * * UTC\").unwrap_err()"
---
failed to parse crontab expression:
*/0 * * * * UTC
^ step must be greater than 0
