src/snapshots/cronexpr__parser__tests__parse_crontab_failed-30.snap
---
source: src/parser.rs
expression: "parse_crontab(\"*/60 * * * * UTC\").unwrap_err()"
---
failed to parse crontab expression:
*/60 * * * * UTC
^ step must be in range 0..=59; found 60
