src/snapshots/cronexpr__parser__tests__parse_crontab_failed-31.snap
---
source: src/parser.rs
expression: "parse_crontab(\"0,,1 * * * * UTC\").unwrap_err()"
---
failed to parse crontab expression:
0,,1 * * * * UTC
 ^ malformed expression
