src/snapshots/cronexpr__parser__tests__parse_crontab_failed-33.snap
---
source: src/parser.rs
expression: "parse_crontab(\"0 0 32W * * UTC\").unwrap_err()"
---
failed to parse crontab expression:
0 0 32W * * UTC
    ^ value must be in range 1..=31; found 32
