src/snapshots/cronexpr__parser__tests__parse_crontab_failed-34.snap
---
source: src/parser.rs
expression: "parse_crontab(\"0 0 * * 5#6 UTC\").unwrap_err()"
---
failed to parse crontab expression:
0 0 * * 5#6 UTC
          ^ value must be in range 1..=5; found 6
