src/snapshots/cronexpr__parser__tests__parse_crontab_failed-35.snap
---
source: src/parser.rs
expression: "parse_crontab(\"0 0 L/2 * * UTC\").unwrap_err()"
---
failed to parse crontab expression:
0 0 L/2 * * UTC
     ^ malformed expression
