src/snapshots/cronexpr__parser__tests__parse_crontab_failed-36.snap
---
source: src/parser.rs
expression: "parse_crontab(\"0 0 * JAN-FOO * UTC\").unwrap_err()"
---
failed to parse crontab expression:
0 0 * JAN-FOO * UTC
         ^ malformed expression
