src/snapshots/cronexpr__parser__tests__parse_crontab_failed-37.snap
---
source: src/parser.rs
expression: "parse_crontab(\"0 0 * * MON# UTC\").unwrap_err()"
---
failed to parse crontab expression:
0 0 * * MON# UTC
           ^ malformed expression
