src/snapshots/cronexpr__parser__tests__parse_crontab_failed-38.snap
---
source: src/parser.rs
expression: "parse_crontab(\"18446744073709551616 * * * * UTC\").unwrap_err()"
---
failed to parse crontab expression:
18446744073709551616 * * * * UTC
^ malformed expression
