src/snapshots/cronexpr__parser__tests__parse_crontab_failed-40.snap
---
source: src/parser.rs
expression: "parse_crontab(\"0,H * * * * UTC\").unwrap_err()"
---
failed to parse crontab expression:
0,H * * * * UTC
 ^ malformed expression
